--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@akashic/akashic-cli-serve",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "A development server for Akashic Engine",
   "scripts": {
-    "prepublish": "npm run build",
+    "prepublish": "npm run setup && npm run build",
     "setup": "npm run copy:material-icons",
     "copy:material-icons": "shx mkdir -p www/thirdparty && shx cp -r node_modules/material-design-icons/iconfont www/thirdparty/material-design-icons",
     "copy:agv": "node build/AkashicGameViewWebBuilder.js",
